--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body{
 }
 
 .img-slider .slide .info h2{
-  color: #fff;
+  color: #ffe392;
   font-size: 45px;
   text-transform: uppercase;
   font-weight: 800;
@@ -56,10 +56,12 @@ body{
 }
 
 .img-slider .slide .info p{
-  color: #fff;
+  color: #ffe392;
   background: rgba(0, 0, 0, 0.1);
-  font-size: 16px;
-  width: 60%;
+  font-size: 13px;
+  width: 90%;
+  line-height: 5mm;
+  letter-spacing: 0.3mm;
   padding: 10px;
   border-radius: 4px;
 }
@@ -68,8 +70,8 @@ body{
   z-index: 2;
   position: absolute;
   display: flex;
-  top: 20px;
-  left: 50%;
+  top: 43px;
+  left: 84%;
   transform: translateX(-50%);
 }
 
@@ -169,4 +171,9 @@ body{
   .img-slider .navigation{
     bottom: 10px;
   }
+}
+
+#end{
+  top: -0.2%;
+  left: -0.5%;
 }
