--- a/style.css
+++ b/style.css
@@ -1,181 +1,66 @@
-
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body{
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #1D212B;
-}
-
-.img-slider{
-  position: relative;
-  width: 800px;
-  height: 500px;
-  margin: 10px;
-  background: #1D212B;
-}
-
-.img-slider .slide{
-  z-index: 1;
-  position: absolute;
-  width: 100%;
-  clip-path: circle(0% at 0 50%);
-}
-
-.img-slider .slide.active{
-  clip-path: circle(150% at 0 50%);
-  transition: 2s;
-  transition-property: clip-path;
-}
-
-.img-slider .slide img{
-  z-index: 1;
-  width: 100%;
-  border-radius: 5px;
-}
-
-.img-slider .slide .info{
-  position: absolute;
-  top: 0;
-  padding: 15px 30px;
-}
-
-.img-slider .slide .info h2{
-  color: #ffe392;
-  font-size: 45px;
-  text-transform: uppercase;
-  font-weight: 800;
-  letter-spacing: 2px;
-  position: relative;
-}
-
-.img-slider .slide .info p{
-  color: #ffe392;
-  background: rgba(0, 0, 0, 0.1);
-  font-size: 15px;
-  width: 90%;
-  line-height: 5mm;
-  letter-spacing: 0.3mm;
-  padding: 10px;
-  border-radius: 4px;
-  position: relative;
-}
-
-.img-slider .navigation{
-  z-index: 2;
-  position: absolute;
-  display: flex;
-  top: 43px;
-  left: 84%;
-  transform: translateX(-50%);
-}
-
-.img-slider .navigation .btn{
-  background: rgba(255, 255, 255, 0.5);
-  width: 12px;
-  height: 12px;
-  margin: 10px;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.img-slider .navigation .btn.active{
-  background: #2696E9;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
-}
-
-@media (max-width: 820px){
-  .img-slider{
-    width: 600px;
-    height: 375px;
-  }
-
-  .img-slider .slide .info{
-    padding: 10px 25px;
-  }
-
-  .img-slider .slide .info h2{
-    font-size: 35px;
-  }
-
-  .img-slider .slide .info p{
-    width: 70%;
-    font-size: 15px;
-  }
-
-  .img-slider .navigation{
-    bottom: 25px;
-  }
-
-  .img-slider .navigation .btn{
-    width: 10px;
-    height: 10px;
-    margin: 8px;
-  }
-}
-
-@media (max-width: 620px){
-  .img-slider{
-    width: 400px;
-    height: 250px;
-  }
-
-  .img-slider .slide .info{
-    padding: 10px 20px;
-  }
-
-  .img-slider .slide .info h2{
     font-size: 30px;
-  }
-
-  .img-slider .slide .info p{
-    width: 80%;
-    font-size: 13px;
-  }
-
-  .img-slider .navigation{
-    bottom: 15px;
-  }
-
-  .img-slider .navigation .btn{
-    width: 8px;
-    height: 8px;
-    margin: 6px;
-  }
+    font-family: sans-serif;
+    background: #e6c45f;/*  */
 }
 
-@media (max-width: 420px){
-  .img-slider{
-    width: 320px;
-    height: 200px;
-  }
-
-  .img-slider .slide .info{
-    padding: 5px 10px;
-  }
-
-  .img-slider .slide .info h2{
-    font-size: 25px;
-  }
-
-  .img-slider .slide .info p{
-    width: 90%;
-    font-size: 11px;
-  }
-
-  .img-slider .navigation{
-    bottom: 10px;
-  }
+.container{
+    position: relative;
+    display: flex;
+    justify-content: center; /* 居中对齐 */
+    align-items: center; /* 对齐横中线 */
+    width: 100%;
+    flex-direction: column; /* flex的方向 */
 }
 
-#end{
-  top: -0.2%;
-  left: -0.5%;
+.card{
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    background:rgb(97, 5, 5);
+    width: 350px;
+    margin: 100px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 15px;
+}
+
+img{
+    z-index: 1;
+    width: 350px;
+    justify-content: center;
+    max-width: 100%;
+    border-radius: 15px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+
+.card h3{
+    position: relative;
+    left : 7%;
+    padding: 3px ;
+    padding-bottom: 15px;
+    color: #e6c45f
+}
+
+.end-card{
+    background:rgb(63, 4, 4);
+}
+
+.adjust-image{
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 15px;
+}
+
+p {
+    position: absolute;
+    top: 5%;
+    left: 3%;
+    font-size: 60%;
+    margin: 8%;
+    color: #e6c45f;
 }
