--- a/style.css
+++ b/style.css
@@ -111,11 +111,11 @@ button {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
 	background-color: #ef941a;
 	color: rgb(97, 5, 5);
-	width: 37%;
+	width: 70%;
 	position: relative;
 	border-radius: 8px;
 	margin: 20%;
-    margin-left: 30%;
+    margin-left: 16%;
 	padding: 1%;
 	line-height: 150%;
 	cursor: pointer;
@@ -124,6 +124,7 @@ button {
 	font-size: 10%;
 	text-transform: uppercase;
 	letter-spacing: 1%;
+    font-size: 80%;
 }
 
 button:hover, button:focus {
